--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -138,7 +138,7 @@ function get_latest_genomes() {
 		</div>
 		
 		<div style="color:dimgray;width:80%;">
-			Welcome to CoGe, the definitive platform for comparative genomics.
+			Welcome to CoGe, the place for comparative genomics.
 			<br><br>
 			CoGe's unique system architecture provides many <a target="_blank" href="http://genomevolution.org/wiki/index.php/Documentation#Web_Application_Documentation">interconnected tools</a> to create <a target="_blank" href="http://genomevolution.org/wiki/index.php/Open-ended_Analysis_Network">open-ended analysis networks</a>.
 			CoGe also provides an easy-to-use framework to organize and share your data and analyses.
