--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -1305,6 +1305,13 @@ Color <span style="color:#FF66FF;">masked</span> and <span style="color:#FF9900;
   </select> Models
  <TR>
   <TD>
+  <font>Show Other Features?</font>
+  <td>
+  <label><input  type="radio" name="show_ofeat" id="show_ofeat" tabindex="1" value="1" <TMPL_VAR NAME="SHOW_OFEAT_YES">/>Yes</label>
+  <label><input  type="radio" name="show_ofeat" id="show_ofeat" tabindex="1" value="0" <TMPL_VAR NAME="SHOW_OFEAT_NO"> />No</label>
+
+ <TR>
+  <TD>
   <font>Show pre-annotated CNSs?</font>
   <td>
   <label><input  type="radio" name="show_cns" id="show_cns" tabindex="1" value="1" <TMPL_VAR NAME="SHOW_CNS_YES">/>Yes</label>
